--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,19 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.QRCodeGenerator" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.QRCodeGenerator" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/light_blue_3</item>
+        <item name="colorPrimaryVariant">@color/light_blue_2</item>
+        <item name="colorOnPrimary">@color/light_blue_5</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/dark_blue_2</item>
+        <item name="colorSecondaryVariant">@color/dark_blue_1</item>
+        <item name="colorOnSecondary">@color/dark_blue_5</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorSecondaryVariant</item>
+        <!-- Customize your theme here. -->
     </style>
 
     <style name="Theme.QRCodeGenerator" parent="Base.Theme.QRCodeGenerator" />
+
 </resources>
