--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_blue_6</item>
         <item name="colorPrimaryVariant">@color/light_blue_2</item>
-        <item name="colorOnPrimary">@color/light_blue_5</item>
+        <item name="colorOnPrimary">@color/dark_blue_4</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/dark_blue_2</item>
         <item name="colorSecondaryVariant">@color/dark_blue_1</item>
