QR Scanner layout and library

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
         android:background="@color/white"
         app:abb_indicatorAppearance="round"
         app:abb_indicatorHeight="6dp"
-        app:abb_indicatorLocation="bottom"
-        app:abb_indicatorMargin="30dp"
+        app:abb_indicatorLocation="top"
+        app:abb_indicatorMargin="15dp"
         app:abb_selectedIndex="0"
         app:abb_selectedTabType="icon"
         app:abb_tabs="@menu/tabs"
