--- a/app/src/main/res/layout/fragment_generate.xml
+++ b/app/src/main/res/layout/fragment_generate.xml
@@ -93,7 +93,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:backgroundTint="#5490D9"
+                    android:backgroundTint="@color/light_blue_6"
                     android:fontFamily="@font/bebasneue_regular"
                     android:text="@string/generate"
                     android:textAllCaps="false"
@@ -105,7 +105,7 @@
                     android:id="@+id/btn_download"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="#5490D9"
+                    android:backgroundTint="@color/light_blue_6"
                     android:fontFamily="@font/bebasneue_regular"
                     android:text="@string/save"
                     android:textAllCaps="false"
