--- a/app/src/main/res/layout-normal/fragment_scanner.xml
+++ b/app/src/main/res/layout-normal/fragment_scanner.xml
@@ -13,12 +13,11 @@
         android:fontFamily="@font/arial"
         android:text="QR Code Scanner"
         android:textColor="@color/white"
-        android:textSize="14sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/guideline1"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/scanner_view" />
+        app:layout_constraintStart_toStartOf="@+id/guideline3" />
 
     <com.budiyev.android.codescanner.CodeScannerView
         android:id="@+id/scanner_view"
@@ -38,7 +37,7 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/top_corner_radius_background"
         android:orientation="vertical"
-        android:padding="25dp"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,14 +45,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             android:background="@drawable/custom_button_background"
             android:orientation="vertical">
 
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="8dp"
+                android:padding="10dp"
                 android:scrollbars="none">
 
                 <TextView
@@ -73,13 +72,13 @@
             android:id="@+id/btn_copy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:backgroundTint="@color/light_blue_6"
             android:fontFamily="@font/bebasneue_regular"
             android:text="Copy Text"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="20sp"
             tools:ignore="VisualLintButtonSize" />
 
         <Button
@@ -91,7 +90,7 @@
             android:text="Delete"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="20sp"
             tools:ignore="VisualLintButtonSize" />
 
     </LinearLayout>
@@ -108,7 +107,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.45" />
+        app:layout_constraintGuide_percent="0.52" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
